fix button color on iOS

--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ button {
 	background-color: #fff;
 	border: none;
 	border-radius: .4em;
+	color: inherit;
 }
 .calc {
 	display: grid;
 	grid-template-columns: 13.375fr 4.125fr;
 	gap: .5em;
-	max-width: 18em;
+	max-width: 20em;
 	margin: 0 auto;
 	background-color: hsl(0, 0%, 90%);
 	padding: 1em;
